Added Rackspace connection details to env.example

--- a/env.example
+++ b/env.example
@@ -6,4 +6,8 @@ CAPSULECRM_ACCOUNT_NAME=''
 CAPSULECRM_API_TOKEN=''
 CAPSULECRM_DEFAULT_OWNER=''
 
+RACKSPACE_API_KEY=''
+RACKSPACE_USERNAME=''
+RACKSPACE_API_ENDPOINT=''
+
 GOOGLE_ANALYTICS_TRACKER='UA-xxxxxx-x'
