Github does not want our keys
and .generators seems to be some artifact from RubyMine

--- a/.gitignore
+++ b/.gitignore
@@ -17,9 +17,10 @@
 /.env
 /.powrc
 .idea/
+.generators
 .DS_Store
-.chef/chef-validator.pem
-.chef/knife.rb
+.chef/*.pem
+.chef/id_*
 .vagrant
 /public/uploads/
 /.env.development
