--- a/env.example
+++ b/env.example
@@ -9,6 +9,8 @@ CAPSULECRM_DEFAULT_OWNER=''
 RACKSPACE_API_KEY=''
 RACKSPACE_USERNAME=''
 RACKSPACE_API_ENDPOINT=''
+RACKSPACE_DIRECTORY_CONTAINER=''
+RACKSPACE_DIRECTORY_ASSET_HOST=''
 
 GOOGLE_ANALYTICS_TRACKER='UA-xxxxxx-x'
 
