--- a/fixtures/vcr_cassettes/Accept_credit_card_payments_during_signup/Member_signup.yml
+++ b/fixtures/vcr_cassettes/Accept_credit_card_payments_during_signup/Member_signup.yml
@@ -14,7 +14,7 @@ http_interactions:
       User-Agent:
       - Stripe/v1 RubyBindings/1.13.0
       Authorization:
-      - Bearer <STRIPE_API_KEY>
+      - Bearer sk_<RAILS_ENV>_39F7AAZeF7Kij0yrNOlDznbH
       Content-Type:
       - application/x-www-form-urlencoded
       X-Stripe-Client-User-Agent:
@@ -94,7 +94,7 @@ http_interactions:
       User-Agent:
       - Stripe/v1 RubyBindings/1.13.0
       Authorization:
-      - Bearer <STRIPE_API_KEY>
+      - Bearer sk_<RAILS_ENV>_39F7AAZeF7Kij0yrNOlDznbH
       Content-Type:
       - application/x-www-form-urlencoded
       X-Stripe-Client-User-Agent:
@@ -161,88 +161,6 @@ http_interactions:
     http_version: 
   recorded_at: Tue, 10 Jun 2014 13:45:30 GMT
 - request:
-    method: post
-    uri: https://api.stripe.com/v1/customers
-    body:
-      encoding: US-ASCII
-      string: card[exp_month]=12&card[exp_year]=2016&card[number]=4242424242424242&card[cvc]=123&plan=sme_supporter&description=Membership%20for%20&email=iain%40foobar.com
-    headers:
-      Accept:
-      - ! '*/*; q=0.5, application/xml'
-      Accept-Encoding:
-      - gzip, deflate
-      User-Agent:
-      - Stripe/v1 RubyBindings/1.13.0
-      Authorization:
-      - Bearer <STRIPE_API_KEY>
-      Content-Type:
-      - application/x-www-form-urlencoded
-      X-Stripe-Client-User-Agent:
-      - ! '{"bindings_version":"1.13.0","lang":"ruby","lang_version":"1.9.3 p545 (2014-02-24)","platform":"x86_64-darwin13.1.0","publisher":"stripe","uname":"Darwin
-        stuarts-mbp-3.home 13.1.0 Darwin Kernel Version 13.1.0: Wed Apr  2 23:52:02
-        PDT 2014; root:xnu-2422.92.1~2/RELEASE_X86_64 x86_64"}'
-      Content-Length:
-      - '157'
-  response:
-    status:
-      code: 200
-      message: OK
-    headers:
-      Server:
-      - nginx
-      Date:
-      - Tue, 10 Jun 2014 13:46:59 GMT
-      Content-Type:
-      - application/json;charset=utf-8
-      Content-Length:
-      - '2230'
-      Access-Control-Allow-Methods:
-      - GET, POST, HEAD, OPTIONS, DELETE
-      Stripe-Version:
-      - '2014-05-19'
-      Cache-Control:
-      - no-cache, no-store
-      Access-Control-Allow-Credentials:
-      - <SKIP_RAILS_ADMIN_INITIALIZER>
-      Access-Control-Max-Age:
-      - '300'
-      Strict-Transport-Security:
-      - max-age=31556926; includeSubDomains
-    body:
-      encoding: US-ASCII
-      string: ! "{\n  \"object\": \"customer\",\n  \"created\": 1402408018,\n  \"id\":
-        \"cus_4CE2ZdreX1vJDi\",\n  \"livemode\": false,\n  \"description\": \"Membership
-        for \",\n  \"email\": \"iain@foobar.com\",\n  \"delinquent\": false,\n  \"metadata\":
-        {},\n  \"subscriptions\": {\n    \"object\": \"list\",\n    \"total_count\":
-        1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4CE2ZdreX1vJDi/subscriptions\",\n
-        \   \"data\": [\n      {\n        \"id\": \"sub_4CE2AVeKgcyxSf\",\n        \"plan\":
-        {\n          \"interval\": \"month\",\n          \"name\": \"SME \\u0026 Nonprofit
-        Supporter\",\n          \"created\": 1402405731,\n          \"amount\": 7200,\n
-        \         \"currency\": \"gbp\",\n          \"id\": \"sme_supporter\",\n          \"object\":
-        \"plan\",\n          \"livemode\": false,\n          \"interval_count\": 1,\n
-        \         \"trial_period_days\": null,\n          \"metadata\": {},\n          \"statement_description\":
-        \"Membership\"\n        },\n        \"object\": \"subscription\",\n        \"start\":
-        1402408018,\n        \"status\": \"active\",\n        \"customer\": \"cus_4CE2ZdreX1vJDi\",\n
-        \       \"cancel_at_period_end\": false,\n        \"current_period_start\":
-        1402408018,\n        \"current_period_end\": 1405000018,\n        \"ended_at\":
-        null,\n        \"trial_start\": null,\n        \"trial_end\": null,\n        \"canceled_at\":
-        null,\n        \"quantity\": 1,\n        \"application_fee_percent\": null,\n
-        \       \"discount\": null,\n        \"metadata\": {}\n      }\n    ]\n  },\n
-        \ \"discount\": null,\n  \"account_balance\": 0,\n  \"currency\": \"gbp\",\n
-        \ \"cards\": {\n    \"object\": \"list\",\n    \"total_count\": 1,\n    \"has_more\":
-        false,\n    \"url\": \"/v1/customers/cus_4CE2ZdreX1vJDi/cards\",\n    \"data\":
-        [\n      {\n        \"id\": \"card_104CE24oB0YITArSLhuAXyUu\",\n        \"object\":
-        \"card\",\n        \"last4\": \"4242\",\n        \"type\": \"Visa\",\n        \"exp_month\":
-        12,\n        \"exp_year\": 2016,\n        \"fingerprint\": \"qBYthW9tt9MyrCdj\",\n
-        \       \"country\": \"US\",\n        \"name\": null,\n        \"address_line1\":
-        null,\n        \"address_line2\": null,\n        \"address_city\": null,\n
-        \       \"address_state\": null,\n        \"address_zip\": null,\n        \"address_country\":
-        null,\n        \"cvc_check\": \"pass\",\n        \"address_line1_check\":
-        null,\n        \"address_zip_check\": null,\n        \"customer\": \"cus_4CE2ZdreX1vJDi\"\n
-        \     }\n    ]\n  },\n  \"default_card\": \"card_104CE24oB0YITArSLhuAXyUu\"\n}\n"
-    http_version: 
-  recorded_at: Tue, 10 Jun 2014 13:47:06 GMT
-- request:
     method: get
     uri: https://api.stripe.com/v1/customers/cus_4CE2ZdreX1vJDi
     body:
@@ -256,7 +174,7 @@ http_interactions:
       User-Agent:
       - Stripe/v1 RubyBindings/1.13.0
       Authorization:
-      - Bearer <STRIPE_API_KEY>
+      - Bearer sk_<RAILS_ENV>_39F7AAZeF7Kij0yrNOlDznbH
       Content-Type:
       - application/x-www-form-urlencoded
       X-Stripe-Client-User-Agent:
@@ -322,4 +240,166 @@ http_interactions:
         \     }\n    ]\n  },\n  \"default_card\": \"card_104CE24oB0YITArSLhuAXyUu\"\n}\n"
     http_version: 
   recorded_at: Tue, 10 Jun 2014 13:47:07 GMT
+- request:
+    method: post
+    uri: https://api.stripe.com/v1/customers
+    body:
+      encoding: US-ASCII
+      string: card[exp_month]=12&card[exp_year]=2016&card[number]=4242424242424242&card[cvc]=123&plan=sme_supporter&description=Membership%20for%20&email=iain%40foobar.com
+    headers:
+      Accept:
+      - ! '*/*; q=0.5, application/xml'
+      Accept-Encoding:
+      - gzip, deflate
+      User-Agent:
+      - Stripe/v1 RubyBindings/1.13.0
+      Authorization:
+      - Bearer sk_<RAILS_ENV>_39F7AAZeF7Kij0yrNOlDznbH
+      Content-Type:
+      - application/x-www-form-urlencoded
+      X-Stripe-Client-User-Agent:
+      - ! '{"bindings_version":"1.13.0","lang":"ruby","lang_version":"1.9.3 p545 (2014-02-24)","platform":"x86_64-darwin13.1.0","publisher":"stripe","uname":"Darwin
+        stuarts-mbp-3.home 13.1.0 Darwin Kernel Version 13.1.0: Wed Apr  2 23:52:02
+        PDT 2014; root:xnu-2422.92.1~2/RELEASE_X86_64 x86_64"}'
+      Content-Length:
+      - '157'
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Server:
+      - nginx
+      Date:
+      - Tue, 10 Jun 2014 13:48:19 GMT
+      Content-Type:
+      - application/json;charset=utf-8
+      Content-Length:
+      - '2230'
+      Access-Control-Allow-Credentials:
+      - 'true'
+      Stripe-Version:
+      - '2014-05-19'
+      Access-Control-Max-Age:
+      - '300'
+      Access-Control-Allow-Methods:
+      - GET, POST, HEAD, OPTIONS, DELETE
+      Cache-Control:
+      - no-cache, no-store
+      Strict-Transport-Security:
+      - max-age=31556926; includeSubDomains
+    body:
+      encoding: US-ASCII
+      string: ! "{\n  \"object\": \"customer\",\n  \"created\": 1402408098,\n  \"id\":
+        \"cus_4CE3d7hOZxWmCg\",\n  \"livemode\": false,\n  \"description\": \"Membership
+        for \",\n  \"email\": \"iain@foobar.com\",\n  \"delinquent\": false,\n  \"metadata\":
+        {},\n  \"subscriptions\": {\n    \"object\": \"list\",\n    \"total_count\":
+        1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4CE3d7hOZxWmCg/subscriptions\",\n
+        \   \"data\": [\n      {\n        \"id\": \"sub_4CE33Nx1aHuqcO\",\n        \"plan\":
+        {\n          \"interval\": \"month\",\n          \"name\": \"SME \\u0026 Nonprofit
+        Supporter\",\n          \"created\": 1402405731,\n          \"amount\": 7200,\n
+        \         \"currency\": \"gbp\",\n          \"id\": \"sme_supporter\",\n          \"object\":
+        \"plan\",\n          \"livemode\": false,\n          \"interval_count\": 1,\n
+        \         \"trial_period_days\": null,\n          \"metadata\": {},\n          \"statement_description\":
+        \"Membership\"\n        },\n        \"object\": \"subscription\",\n        \"start\":
+        1402408098,\n        \"status\": \"active\",\n        \"customer\": \"cus_4CE3d7hOZxWmCg\",\n
+        \       \"cancel_at_period_end\": false,\n        \"current_period_start\":
+        1402408098,\n        \"current_period_end\": 1405000098,\n        \"ended_at\":
+        null,\n        \"trial_start\": null,\n        \"trial_end\": null,\n        \"canceled_at\":
+        null,\n        \"quantity\": 1,\n        \"application_fee_percent\": null,\n
+        \       \"discount\": null,\n        \"metadata\": {}\n      }\n    ]\n  },\n
+        \ \"discount\": null,\n  \"account_balance\": 0,\n  \"currency\": \"gbp\",\n
+        \ \"cards\": {\n    \"object\": \"list\",\n    \"total_count\": 1,\n    \"has_more\":
+        false,\n    \"url\": \"/v1/customers/cus_4CE3d7hOZxWmCg/cards\",\n    \"data\":
+        [\n      {\n        \"id\": \"card_104CE34oB0YITArSEiGN9Csf\",\n        \"object\":
+        \"card\",\n        \"last4\": \"4242\",\n        \"type\": \"Visa\",\n        \"exp_month\":
+        12,\n        \"exp_year\": 2016,\n        \"fingerprint\": \"qBYthW9tt9MyrCdj\",\n
+        \       \"country\": \"US\",\n        \"name\": null,\n        \"address_line1\":
+        null,\n        \"address_line2\": null,\n        \"address_city\": null,\n
+        \       \"address_state\": null,\n        \"address_zip\": null,\n        \"address_country\":
+        null,\n        \"cvc_check\": \"pass\",\n        \"address_line1_check\":
+        null,\n        \"address_zip_check\": null,\n        \"customer\": \"cus_4CE3d7hOZxWmCg\"\n
+        \     }\n    ]\n  },\n  \"default_card\": \"card_104CE34oB0YITArSEiGN9Csf\"\n}\n"
+    http_version: 
+  recorded_at: Tue, 10 Jun 2014 13:48:26 GMT
+- request:
+    method: get
+    uri: https://api.stripe.com/v1/customers/cus_4CE3d7hOZxWmCg
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept:
+      - ! '*/*; q=0.5, application/xml'
+      Accept-Encoding:
+      - gzip, deflate
+      User-Agent:
+      - Stripe/v1 RubyBindings/1.13.0
+      Authorization:
+      - Bearer sk_<RAILS_ENV>_39F7AAZeF7Kij0yrNOlDznbH
+      Content-Type:
+      - application/x-www-form-urlencoded
+      X-Stripe-Client-User-Agent:
+      - ! '{"bindings_version":"1.13.0","lang":"ruby","lang_version":"1.9.3 p545 (2014-02-24)","platform":"x86_64-darwin13.1.0","publisher":"stripe","uname":"Darwin
+        stuarts-mbp-3.home 13.1.0 Darwin Kernel Version 13.1.0: Wed Apr  2 23:52:02
+        PDT 2014; root:xnu-2422.92.1~2/RELEASE_X86_64 x86_64"}'
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Server:
+      - nginx
+      Date:
+      - Tue, 10 Jun 2014 13:48:21 GMT
+      Content-Type:
+      - application/json;charset=utf-8
+      Content-Length:
+      - '2230'
+      Access-Control-Allow-Methods:
+      - GET, POST, HEAD, OPTIONS, DELETE
+      Access-Control-Max-Age:
+      - '300'
+      Cache-Control:
+      - no-cache, no-store
+      Access-Control-Allow-Credentials:
+      - 'true'
+      Stripe-Version:
+      - '2014-05-19'
+      Strict-Transport-Security:
+      - max-age=31556926; includeSubDomains
+    body:
+      encoding: US-ASCII
+      string: ! "{\n  \"object\": \"customer\",\n  \"created\": 1402408098,\n  \"id\":
+        \"cus_4CE3d7hOZxWmCg\",\n  \"livemode\": false,\n  \"description\": \"Membership
+        for \",\n  \"email\": \"iain@foobar.com\",\n  \"delinquent\": false,\n  \"metadata\":
+        {},\n  \"subscriptions\": {\n    \"object\": \"list\",\n    \"total_count\":
+        1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4CE3d7hOZxWmCg/subscriptions\",\n
+        \   \"data\": [\n      {\n        \"id\": \"sub_4CE33Nx1aHuqcO\",\n        \"plan\":
+        {\n          \"interval\": \"month\",\n          \"name\": \"SME \\u0026 Nonprofit
+        Supporter\",\n          \"created\": 1402405731,\n          \"amount\": 7200,\n
+        \         \"currency\": \"gbp\",\n          \"id\": \"sme_supporter\",\n          \"object\":
+        \"plan\",\n          \"livemode\": false,\n          \"interval_count\": 1,\n
+        \         \"trial_period_days\": null,\n          \"metadata\": {},\n          \"statement_description\":
+        \"Membership\"\n        },\n        \"object\": \"subscription\",\n        \"start\":
+        1402408098,\n        \"status\": \"active\",\n        \"customer\": \"cus_4CE3d7hOZxWmCg\",\n
+        \       \"cancel_at_period_end\": false,\n        \"current_period_start\":
+        1402408098,\n        \"current_period_end\": 1405000098,\n        \"ended_at\":
+        null,\n        \"trial_start\": null,\n        \"trial_end\": null,\n        \"canceled_at\":
+        null,\n        \"quantity\": 1,\n        \"application_fee_percent\": null,\n
+        \       \"discount\": null,\n        \"metadata\": {}\n      }\n    ]\n  },\n
+        \ \"discount\": null,\n  \"account_balance\": 0,\n  \"currency\": \"gbp\",\n
+        \ \"cards\": {\n    \"object\": \"list\",\n    \"total_count\": 1,\n    \"has_more\":
+        false,\n    \"url\": \"/v1/customers/cus_4CE3d7hOZxWmCg/cards\",\n    \"data\":
+        [\n      {\n        \"id\": \"card_104CE34oB0YITArSEiGN9Csf\",\n        \"object\":
+        \"card\",\n        \"last4\": \"4242\",\n        \"type\": \"Visa\",\n        \"exp_month\":
+        12,\n        \"exp_year\": 2016,\n        \"fingerprint\": \"qBYthW9tt9MyrCdj\",\n
+        \       \"country\": \"US\",\n        \"name\": null,\n        \"address_line1\":
+        null,\n        \"address_line2\": null,\n        \"address_city\": null,\n
+        \       \"address_state\": null,\n        \"address_zip\": null,\n        \"address_country\":
+        null,\n        \"cvc_check\": \"pass\",\n        \"address_line1_check\":
+        null,\n        \"address_zip_check\": null,\n        \"customer\": \"cus_4CE3d7hOZxWmCg\"\n
+        \     }\n    ]\n  },\n  \"default_card\": \"card_104CE34oB0YITArSEiGN9Csf\"\n}\n"
+    http_version: 
+  recorded_at: Tue, 10 Jun 2014 13:48:28 GMT
 recorded_with: VCR 2.9.2
