--- a/.travis.yml
+++ b/.travis.yml
@@ -34,3 +34,4 @@ env:
   - secure: a43FgkoIGSbARBwni6O+48rYxHdT12yp35Quo1IBSv2MywqEJQ8K1+0OGWwNfHwtwjIpK/MG0NEntajsWYRer/9YncOP0O3SuZwO8IPUnWgbVP5XSHxoGHZuWMAhlmuwx66dt+Yrdb7ZzP1PTD/zb8a01X50soYtbKpJlTrux0o=
   - secure: K8ck0lX/cC6pl++6lp+pBzLUHE1NL+ldF7/5x/6/+TiLUCPp3X+EQaa1TSe8UnY1Dot+XxdQ5Z1BKBcmn1ebqnBz8zoxCKdaKZpXiifuKud9p9Xf4HAloy78Nb/8HfMPBfVkxfUFfxDJWhTskVmbhKv5Q7+9I8QBt4XOL/Axxww=
   - secure: MiZJ+pmU5stria23Cbf5AZEmMtSJmTyQAoFHY18n0MbcJbUHCquiG7E2HhzM6h9vvBnSBF1dKEV6p5XlZNs06MRvId/R4qkb8OL35QVqbQyrot7RHBlKaBaAeKrHheYNi4Sm5FiAOmCt6xgu9sMcdcVfDwJLEnjJyZHZzUuxWyI=
+  - STRIPE_API_KEY=fakeapikey
