--- a/fixtures/vcr_cassettes/Accept_credit_card_payments_during_signup/Bad_credit_card_details/_1234_123_12_2016_Card_number_.yml
+++ b/fixtures/vcr_cassettes/Accept_credit_card_payments_during_signup/Bad_credit_card_details/_1234_123_12_2016_Card_number_.yml
@@ -5,7 +5,7 @@ http_interactions:
     uri: https://api.stripe.com/v1/customers
     body:
       encoding: US-ASCII
-      string: card[exp_month]=12&card[exp_year]=2016&card[number]=1234&card[cvc]=123&plan=sme_supporter&description=Membership%20for%20&email=iain%40foobar.com
+      string: card[exp_month]=12&card[exp_year]=2016&card[number]=1234&card[cvc]=123&plan=corporate_supporter_monthly&description=Membership%20for%20&email=iain%40foobar.com
     headers:
       Accept:
       - ! '*/*; q=0.5, application/xml'
@@ -22,7 +22,7 @@ http_interactions:
         Agrajag.local 13.2.0 Darwin Kernel Version 13.2.0: Thu Apr 17 23:03:13 PDT
         2014; root:xnu-2422.100.13~1/RELEASE_X86_64 x86_64"}'
       Content-Length:
-      - '145'
+      - '159'
   response:
     status:
       code: 402
@@ -31,19 +31,19 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Tue, 10 Jun 2014 15:03:06 GMT
+      - Wed, 11 Jun 2014 10:58:53 GMT
       Content-Type:
       - application/json;charset=utf-8
       Content-Length:
       - '148'
-      Access-Control-Allow-Methods:
-      - GET, POST, HEAD, OPTIONS, DELETE
       Access-Control-Max-Age:
       - '300'
       Cache-Control:
       - no-cache, no-store
       Access-Control-Allow-Credentials:
-      - 'true'
+      - <SKIP_RAILS_ADMIN_INITIALIZER>
+      Access-Control-Allow-Methods:
+      - GET, POST, HEAD, OPTIONS, DELETE
       Stripe-Version:
       - '2014-05-19'
       Strict-Transport-Security:
@@ -54,5 +54,5 @@ http_interactions:
         \   \"type\": \"card_error\",\n    \"param\": \"number\",\n    \"code\": \"invalid_number\"\n
         \ }\n}\n"
     http_version: 
-  recorded_at: Tue, 10 Jun 2014 15:03:07 GMT
+  recorded_at: Wed, 11 Jun 2014 10:58:53 GMT
 recorded_with: VCR 2.9.2
