--- a/fixtures/vcr_cassettes/Accept_credit_card_payments_during_signup/Bad_credit_card_details/_4242424242424242_123_13_2016_Card_expiry_month_.yml
+++ b/fixtures/vcr_cassettes/Accept_credit_card_payments_during_signup/Bad_credit_card_details/_4242424242424242_123_13_2016_Card_expiry_month_.yml
@@ -5,7 +5,7 @@ http_interactions:
     uri: https://api.stripe.com/v1/customers
     body:
       encoding: US-ASCII
-      string: card[exp_month]=13&card[exp_year]=2016&card[number]=4242424242424242&card[cvc]=123&plan=sme_supporter&description=Membership%20for%20&email=iain%40foobar.com
+      string: card[exp_month]=13&card[exp_year]=2016&card[number]=4242424242424242&card[cvc]=123&plan=corporate_supporter_monthly&description=Membership%20for%20&email=iain%40foobar.com
     headers:
       Accept:
       - ! '*/*; q=0.5, application/xml'
@@ -22,7 +22,7 @@ http_interactions:
         Agrajag.local 13.2.0 Darwin Kernel Version 13.2.0: Thu Apr 17 23:03:13 PDT
         2014; root:xnu-2422.100.13~1/RELEASE_X86_64 x86_64"}'
       Content-Length:
-      - '157'
+      - '171'
   response:
     status:
       code: 402
@@ -31,13 +31,13 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Tue, 10 Jun 2014 15:03:08 GMT
+      - Wed, 11 Jun 2014 10:58:55 GMT
       Content-Type:
       - application/json;charset=utf-8
       Content-Length:
       - '167'
       Access-Control-Allow-Credentials:
-      - 'true'
+      - <SKIP_RAILS_ADMIN_INITIALIZER>
       Stripe-Version:
       - '2014-05-19'
       Access-Control-Max-Age:
@@ -54,5 +54,5 @@ http_interactions:
         is invalid.\",\n    \"type\": \"card_error\",\n    \"param\": \"exp_month\",\n
         \   \"code\": \"invalid_expiry_month\"\n  }\n}\n"
     http_version: 
-  recorded_at: Tue, 10 Jun 2014 15:03:08 GMT
+  recorded_at: Wed, 11 Jun 2014 10:58:55 GMT
 recorded_with: VCR 2.9.2
