--- a/fixtures/vcr_cassettes/Accept_credit_card_payments_during_signup/Bad_credit_card_details/_4242424242424241_123_12_2016_Card_number_.yml
+++ b/fixtures/vcr_cassettes/Accept_credit_card_payments_during_signup/Bad_credit_card_details/_4242424242424241_123_12_2016_Card_number_.yml
@@ -5,7 +5,7 @@ http_interactions:
     uri: https://api.stripe.com/v1/customers
     body:
       encoding: US-ASCII
-      string: card[exp_month]=12&card[exp_year]=2016&card[number]=4242424242424241&card[cvc]=123&plan=corporate_supporter_monthly&description=Membership%20for%20&email=iain%40foobar.com
+      string: card[exp_month]=12&card[exp_year]=2016&card[number]=4242424242424241&card[cvc]=123&plan=corporate_supporter_monthly&description=FooBar%20Inc%20corporate%20supporter%20membership%20(RI5646UV)
     headers:
       Accept:
       - ! '*/*; q=0.5, application/xml'
@@ -22,7 +22,7 @@ http_interactions:
         Agrajag.local 13.2.0 Darwin Kernel Version 13.2.0: Thu Apr 17 23:03:13 PDT
         2014; root:xnu-2422.100.13~1/RELEASE_X86_64 x86_64"}'
       Content-Length:
-      - '171'
+      - '190'
   response:
     status:
       code: 402
@@ -31,21 +31,21 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Wed, 11 Jun 2014 10:58:49 GMT
+      - Wed, 11 Jun 2014 14:12:05 GMT
       Content-Type:
       - application/json;charset=utf-8
       Content-Length:
       - '150'
+      Access-Control-Allow-Methods:
+      - GET, POST, HEAD, OPTIONS, DELETE
       Stripe-Version:
       - '2014-05-19'
       Cache-Control:
       - no-cache, no-store
-      Access-Control-Allow-Methods:
-      - GET, POST, HEAD, OPTIONS, DELETE
-      Access-Control-Max-Age:
-      - '300'
       Access-Control-Allow-Credentials:
       - <SKIP_RAILS_ADMIN_INITIALIZER>
+      Access-Control-Max-Age:
+      - '300'
       Strict-Transport-Security:
       - max-age=31556926; includeSubDomains
     body:
@@ -54,5 +54,5 @@ http_interactions:
         \   \"type\": \"card_error\",\n    \"param\": \"number\",\n    \"code\": \"incorrect_number\"\n
         \ }\n}\n"
     http_version: 
-  recorded_at: Wed, 11 Jun 2014 10:58:49 GMT
+  recorded_at: Wed, 11 Jun 2014 14:12:05 GMT
 recorded_with: VCR 2.9.2
