--- a/fixtures/vcr_cassettes/Accept_credit_card_payments_during_signup/Correct_amount_should_be_charged/_small_non_commercial_supporter_monthly_.yml
+++ b/fixtures/vcr_cassettes/Accept_credit_card_payments_during_signup/Correct_amount_should_be_charged/_small_non_commercial_supporter_monthly_.yml
@@ -5,7 +5,7 @@ http_interactions:
     uri: https://api.stripe.com/v1/customers
     body:
       encoding: US-ASCII
-      string: card[exp_month]=12&card[exp_year]=2016&card[number]=4242424242424242&card[cvc]=123&plan=supporter_monthly&description=Membership%20for%20&email=iain%40foobar.com
+      string: card[exp_month]=12&card[exp_year]=2016&card[number]=4242424242424242&card[cvc]=123&plan=supporter_monthly&description=FooBar%20Inc%20supporter%20membership%20(HY9162BP)
     headers:
       Accept:
       - ! '*/*; q=0.5, application/xml'
@@ -22,7 +22,7 @@ http_interactions:
         Agrajag.local 13.2.0 Darwin Kernel Version 13.2.0: Thu Apr 17 23:03:13 PDT
         2014; root:xnu-2422.100.13~1/RELEASE_X86_64 x86_64"}'
       Content-Length:
-      - '161'
+      - '168'
   response:
     status:
       code: 200
@@ -31,60 +31,60 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Wed, 11 Jun 2014 10:58:35 GMT
+      - Wed, 11 Jun 2014 14:11:51 GMT
       Content-Type:
       - application/json;charset=utf-8
       Content-Length:
-      - '2215'
-      Cache-Control:
-      - no-cache, no-store
+      - '2229'
       Access-Control-Allow-Credentials:
       - <SKIP_RAILS_ADMIN_INITIALIZER>
-      Access-Control-Allow-Methods:
-      - GET, POST, HEAD, OPTIONS, DELETE
       Stripe-Version:
       - '2014-05-19'
       Access-Control-Max-Age:
       - '300'
+      Access-Control-Allow-Methods:
+      - GET, POST, HEAD, OPTIONS, DELETE
+      Cache-Control:
+      - no-cache, no-store
       Strict-Transport-Security:
       - max-age=31556926; includeSubDomains
     body:
       encoding: US-ASCII
-      string: ! "{\n  \"object\": \"customer\",\n  \"created\": 1402484315,\n  \"id\":
-        \"cus_4CYYmzsWYn5HYN\",\n  \"livemode\": false,\n  \"description\": \"Membership
-        for \",\n  \"email\": \"iain@foobar.com\",\n  \"delinquent\": false,\n  \"metadata\":
-        {},\n  \"subscriptions\": {\n    \"object\": \"list\",\n    \"total_count\":
-        1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4CYYmzsWYn5HYN/subscriptions\",\n
-        \   \"data\": [\n      {\n        \"id\": \"sub_4CYYEJZ7OTg4EF\",\n        \"plan\":
+      string: ! "{\n  \"object\": \"customer\",\n  \"created\": 1402495910,\n  \"id\":
+        \"cus_4CbfZPDMPGVU5g\",\n  \"livemode\": false,\n  \"description\": \"FooBar
+        Inc supporter membership (HY9162BP)\",\n  \"email\": null,\n  \"delinquent\":
+        false,\n  \"metadata\": {},\n  \"subscriptions\": {\n    \"object\": \"list\",\n
+        \   \"total_count\": 1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4CbfZPDMPGVU5g/subscriptions\",\n
+        \   \"data\": [\n      {\n        \"id\": \"sub_4CbfPHPmimWwMT\",\n        \"plan\":
         {\n          \"interval\": \"month\",\n          \"name\": \"Supporter (Monthly)\",\n
         \         \"created\": 1402481467,\n          \"amount\": 6000,\n          \"currency\":
         \"gbp\",\n          \"id\": \"supporter_monthly\",\n          \"object\":
         \"plan\",\n          \"livemode\": false,\n          \"interval_count\": 1,\n
         \         \"trial_period_days\": null,\n          \"metadata\": {},\n          \"statement_description\":
         null\n        },\n        \"object\": \"subscription\",\n        \"start\":
-        1402484315,\n        \"status\": \"active\",\n        \"customer\": \"cus_4CYYmzsWYn5HYN\",\n
+        1402495910,\n        \"status\": \"active\",\n        \"customer\": \"cus_4CbfZPDMPGVU5g\",\n
         \       \"cancel_at_period_end\": false,\n        \"current_period_start\":
-        1402484315,\n        \"current_period_end\": 1405076315,\n        \"ended_at\":
+        1402495910,\n        \"current_period_end\": 1405087910,\n        \"ended_at\":
         null,\n        \"trial_start\": null,\n        \"trial_end\": null,\n        \"canceled_at\":
         null,\n        \"quantity\": 1,\n        \"application_fee_percent\": null,\n
         \       \"discount\": null,\n        \"metadata\": {}\n      }\n    ]\n  },\n
         \ \"discount\": null,\n  \"account_balance\": 0,\n  \"currency\": \"gbp\",\n
         \ \"cards\": {\n    \"object\": \"list\",\n    \"total_count\": 1,\n    \"has_more\":
-        false,\n    \"url\": \"/v1/customers/cus_4CYYmzsWYn5HYN/cards\",\n    \"data\":
-        [\n      {\n        \"id\": \"card_104CYY4AkkLX9BwVIKcrfKWW\",\n        \"object\":
+        false,\n    \"url\": \"/v1/customers/cus_4CbfZPDMPGVU5g/cards\",\n    \"data\":
+        [\n      {\n        \"id\": \"card_104Cbf4AkkLX9BwVyQldbahf\",\n        \"object\":
         \"card\",\n        \"last4\": \"4242\",\n        \"type\": \"Visa\",\n        \"exp_month\":
         12,\n        \"exp_year\": 2016,\n        \"fingerprint\": \"ynpvkg0lBh03Sjdq\",\n
         \       \"country\": \"US\",\n        \"name\": null,\n        \"address_line1\":
         null,\n        \"address_line2\": null,\n        \"address_city\": null,\n
         \       \"address_state\": null,\n        \"address_zip\": null,\n        \"address_country\":
         null,\n        \"cvc_check\": \"pass\",\n        \"address_line1_check\":
-        null,\n        \"address_zip_check\": null,\n        \"customer\": \"cus_4CYYmzsWYn5HYN\"\n
-        \     }\n    ]\n  },\n  \"default_card\": \"card_104CYY4AkkLX9BwVIKcrfKWW\"\n}\n"
+        null,\n        \"address_zip_check\": null,\n        \"customer\": \"cus_4CbfZPDMPGVU5g\"\n
+        \     }\n    ]\n  },\n  \"default_card\": \"card_104Cbf4AkkLX9BwVyQldbahf\"\n}\n"
     http_version: 
-  recorded_at: Wed, 11 Jun 2014 10:58:35 GMT
+  recorded_at: Wed, 11 Jun 2014 14:11:51 GMT
 - request:
     method: get
-    uri: https://api.stripe.com/v1/customers/cus_4CYYmzsWYn5HYN
+    uri: https://api.stripe.com/v1/customers/cus_4CbfZPDMPGVU5g
     body:
       encoding: US-ASCII
       string: ''
@@ -111,60 +111,60 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Wed, 11 Jun 2014 10:58:36 GMT
+      - Wed, 11 Jun 2014 14:11:52 GMT
       Content-Type:
       - application/json;charset=utf-8
       Content-Length:
-      - '2215'
-      Cache-Control:
-      - no-cache, no-store
+      - '2229'
+      Access-Control-Allow-Credentials:
+      - <SKIP_RAILS_ADMIN_INITIALIZER>
       Stripe-Version:
       - '2014-05-19'
       Access-Control-Max-Age:
       - '300'
       Access-Control-Allow-Methods:
       - GET, POST, HEAD, OPTIONS, DELETE
-      Access-Control-Allow-Credentials:
-      - <SKIP_RAILS_ADMIN_INITIALIZER>
+      Cache-Control:
+      - no-cache, no-store
       Strict-Transport-Security:
       - max-age=31556926; includeSubDomains
     body:
       encoding: US-ASCII
-      string: ! "{\n  \"object\": \"customer\",\n  \"created\": 1402484315,\n  \"id\":
-        \"cus_4CYYmzsWYn5HYN\",\n  \"livemode\": false,\n  \"description\": \"Membership
-        for \",\n  \"email\": \"iain@foobar.com\",\n  \"delinquent\": false,\n  \"metadata\":
-        {},\n  \"subscriptions\": {\n    \"object\": \"list\",\n    \"total_count\":
-        1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4CYYmzsWYn5HYN/subscriptions\",\n
-        \   \"data\": [\n      {\n        \"id\": \"sub_4CYYEJZ7OTg4EF\",\n        \"plan\":
+      string: ! "{\n  \"object\": \"customer\",\n  \"created\": 1402495910,\n  \"id\":
+        \"cus_4CbfZPDMPGVU5g\",\n  \"livemode\": false,\n  \"description\": \"FooBar
+        Inc supporter membership (HY9162BP)\",\n  \"email\": null,\n  \"delinquent\":
+        false,\n  \"metadata\": {},\n  \"subscriptions\": {\n    \"object\": \"list\",\n
+        \   \"total_count\": 1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4CbfZPDMPGVU5g/subscriptions\",\n
+        \   \"data\": [\n      {\n        \"id\": \"sub_4CbfPHPmimWwMT\",\n        \"plan\":
         {\n          \"interval\": \"month\",\n          \"name\": \"Supporter (Monthly)\",\n
         \         \"created\": 1402481467,\n          \"amount\": 6000,\n          \"currency\":
         \"gbp\",\n          \"id\": \"supporter_monthly\",\n          \"object\":
         \"plan\",\n          \"livemode\": false,\n          \"interval_count\": 1,\n
         \         \"trial_period_days\": null,\n          \"metadata\": {},\n          \"statement_description\":
         null\n        },\n        \"object\": \"subscription\",\n        \"start\":
-        1402484315,\n        \"status\": \"active\",\n        \"customer\": \"cus_4CYYmzsWYn5HYN\",\n
+        1402495910,\n        \"status\": \"active\",\n        \"customer\": \"cus_4CbfZPDMPGVU5g\",\n
         \       \"cancel_at_period_end\": false,\n        \"current_period_start\":
-        1402484315,\n        \"current_period_end\": 1405076315,\n        \"ended_at\":
+        1402495910,\n        \"current_period_end\": 1405087910,\n        \"ended_at\":
         null,\n        \"trial_start\": null,\n        \"trial_end\": null,\n        \"canceled_at\":
         null,\n        \"quantity\": 1,\n        \"application_fee_percent\": null,\n
         \       \"discount\": null,\n        \"metadata\": {}\n      }\n    ]\n  },\n
         \ \"discount\": null,\n  \"account_balance\": 0,\n  \"currency\": \"gbp\",\n
         \ \"cards\": {\n    \"object\": \"list\",\n    \"total_count\": 1,\n    \"has_more\":
-        false,\n    \"url\": \"/v1/customers/cus_4CYYmzsWYn5HYN/cards\",\n    \"data\":
-        [\n      {\n        \"id\": \"card_104CYY4AkkLX9BwVIKcrfKWW\",\n        \"object\":
+        false,\n    \"url\": \"/v1/customers/cus_4CbfZPDMPGVU5g/cards\",\n    \"data\":
+        [\n      {\n        \"id\": \"card_104Cbf4AkkLX9BwVyQldbahf\",\n        \"object\":
         \"card\",\n        \"last4\": \"4242\",\n        \"type\": \"Visa\",\n        \"exp_month\":
         12,\n        \"exp_year\": 2016,\n        \"fingerprint\": \"ynpvkg0lBh03Sjdq\",\n
         \       \"country\": \"US\",\n        \"name\": null,\n        \"address_line1\":
         null,\n        \"address_line2\": null,\n        \"address_city\": null,\n
         \       \"address_state\": null,\n        \"address_zip\": null,\n        \"address_country\":
         null,\n        \"cvc_check\": \"pass\",\n        \"address_line1_check\":
-        null,\n        \"address_zip_check\": null,\n        \"customer\": \"cus_4CYYmzsWYn5HYN\"\n
-        \     }\n    ]\n  },\n  \"default_card\": \"card_104CYY4AkkLX9BwVIKcrfKWW\"\n}\n"
+        null,\n        \"address_zip_check\": null,\n        \"customer\": \"cus_4CbfZPDMPGVU5g\"\n
+        \     }\n    ]\n  },\n  \"default_card\": \"card_104Cbf4AkkLX9BwVyQldbahf\"\n}\n"
     http_version: 
-  recorded_at: Wed, 11 Jun 2014 10:58:36 GMT
+  recorded_at: Wed, 11 Jun 2014 14:11:52 GMT
 - request:
     method: get
-    uri: https://api.stripe.com/v1/customers/cus_4CYYmzsWYn5HYN
+    uri: https://api.stripe.com/v1/customers/cus_4CbfZPDMPGVU5g
     body:
       encoding: US-ASCII
       string: ''
@@ -191,55 +191,55 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Wed, 11 Jun 2014 10:58:37 GMT
+      - Wed, 11 Jun 2014 14:11:52 GMT
       Content-Type:
       - application/json;charset=utf-8
       Content-Length:
-      - '2215'
-      Stripe-Version:
-      - '2014-05-19'
-      Cache-Control:
-      - no-cache, no-store
+      - '2229'
       Access-Control-Allow-Methods:
       - GET, POST, HEAD, OPTIONS, DELETE
       Access-Control-Max-Age:
       - '300'
+      Cache-Control:
+      - no-cache, no-store
       Access-Control-Allow-Credentials:
       - <SKIP_RAILS_ADMIN_INITIALIZER>
+      Stripe-Version:
+      - '2014-05-19'
       Strict-Transport-Security:
       - max-age=31556926; includeSubDomains
     body:
       encoding: US-ASCII
-      string: ! "{\n  \"object\": \"customer\",\n  \"created\": 1402484315,\n  \"id\":
-        \"cus_4CYYmzsWYn5HYN\",\n  \"livemode\": false,\n  \"description\": \"Membership
-        for \",\n  \"email\": \"iain@foobar.com\",\n  \"delinquent\": false,\n  \"metadata\":
-        {},\n  \"subscriptions\": {\n    \"object\": \"list\",\n    \"total_count\":
-        1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4CYYmzsWYn5HYN/subscriptions\",\n
-        \   \"data\": [\n      {\n        \"id\": \"sub_4CYYEJZ7OTg4EF\",\n        \"plan\":
+      string: ! "{\n  \"object\": \"customer\",\n  \"created\": 1402495910,\n  \"id\":
+        \"cus_4CbfZPDMPGVU5g\",\n  \"livemode\": false,\n  \"description\": \"FooBar
+        Inc supporter membership (HY9162BP)\",\n  \"email\": null,\n  \"delinquent\":
+        false,\n  \"metadata\": {},\n  \"subscriptions\": {\n    \"object\": \"list\",\n
+        \   \"total_count\": 1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4CbfZPDMPGVU5g/subscriptions\",\n
+        \   \"data\": [\n      {\n        \"id\": \"sub_4CbfPHPmimWwMT\",\n        \"plan\":
         {\n          \"interval\": \"month\",\n          \"name\": \"Supporter (Monthly)\",\n
         \         \"created\": 1402481467,\n          \"amount\": 6000,\n          \"currency\":
         \"gbp\",\n          \"id\": \"supporter_monthly\",\n          \"object\":
         \"plan\",\n          \"livemode\": false,\n          \"interval_count\": 1,\n
         \         \"trial_period_days\": null,\n          \"metadata\": {},\n          \"statement_description\":
         null\n        },\n        \"object\": \"subscription\",\n        \"start\":
-        1402484315,\n        \"status\": \"active\",\n        \"customer\": \"cus_4CYYmzsWYn5HYN\",\n
+        1402495910,\n        \"status\": \"active\",\n        \"customer\": \"cus_4CbfZPDMPGVU5g\",\n
         \       \"cancel_at_period_end\": false,\n        \"current_period_start\":
-        1402484315,\n        \"current_period_end\": 1405076315,\n        \"ended_at\":
+        1402495910,\n        \"current_period_end\": 1405087910,\n        \"ended_at\":
         null,\n        \"trial_start\": null,\n        \"trial_end\": null,\n        \"canceled_at\":
         null,\n        \"quantity\": 1,\n        \"application_fee_percent\": null,\n
         \       \"discount\": null,\n        \"metadata\": {}\n      }\n    ]\n  },\n
         \ \"discount\": null,\n  \"account_balance\": 0,\n  \"currency\": \"gbp\",\n
         \ \"cards\": {\n    \"object\": \"list\",\n    \"total_count\": 1,\n    \"has_more\":
-        false,\n    \"url\": \"/v1/customers/cus_4CYYmzsWYn5HYN/cards\",\n    \"data\":
-        [\n      {\n        \"id\": \"card_104CYY4AkkLX9BwVIKcrfKWW\",\n        \"object\":
+        false,\n    \"url\": \"/v1/customers/cus_4CbfZPDMPGVU5g/cards\",\n    \"data\":
+        [\n      {\n        \"id\": \"card_104Cbf4AkkLX9BwVyQldbahf\",\n        \"object\":
         \"card\",\n        \"last4\": \"4242\",\n        \"type\": \"Visa\",\n        \"exp_month\":
         12,\n        \"exp_year\": 2016,\n        \"fingerprint\": \"ynpvkg0lBh03Sjdq\",\n
         \       \"country\": \"US\",\n        \"name\": null,\n        \"address_line1\":
         null,\n        \"address_line2\": null,\n        \"address_city\": null,\n
         \       \"address_state\": null,\n        \"address_zip\": null,\n        \"address_country\":
         null,\n        \"cvc_check\": \"pass\",\n        \"address_line1_check\":
-        null,\n        \"address_zip_check\": null,\n        \"customer\": \"cus_4CYYmzsWYn5HYN\"\n
-        \     }\n    ]\n  },\n  \"default_card\": \"card_104CYY4AkkLX9BwVIKcrfKWW\"\n}\n"
+        null,\n        \"address_zip_check\": null,\n        \"customer\": \"cus_4CbfZPDMPGVU5g\"\n
+        \     }\n    ]\n  },\n  \"default_card\": \"card_104Cbf4AkkLX9BwVyQldbahf\"\n}\n"
     http_version: 
-  recorded_at: Wed, 11 Jun 2014 10:58:37 GMT
+  recorded_at: Wed, 11 Jun 2014 14:11:52 GMT
 recorded_with: VCR 2.9.2
