--- a/fixtures/vcr_cassettes/Accept_credit_card_payments_during_signup/Member_signup.yml
+++ b/fixtures/vcr_cassettes/Accept_credit_card_payments_during_signup/Member_signup.yml
@@ -5,7 +5,7 @@ http_interactions:
     uri: https://api.stripe.com/v1/customers
     body:
       encoding: US-ASCII
-      string: card[exp_month]=12&card[exp_year]=2016&card[number]=4242424242424242&card[cvc]=123&plan=corporate_supporter_monthly&description=Membership%20for%20&email=iain%40foobar.com
+      string: card[exp_month]=12&card[exp_year]=2016&card[number]=4242424242424242&card[cvc]=123&plan=corporate_supporter_monthly&description=FooBar%20Inc%20corporate%20supporter%20membership%20(KE6698TD)
     headers:
       Accept:
       - ! '*/*; q=0.5, application/xml'
@@ -22,7 +22,7 @@ http_interactions:
         Agrajag.local 13.2.0 Darwin Kernel Version 13.2.0: Thu Apr 17 23:03:13 PDT
         2014; root:xnu-2422.100.13~1/RELEASE_X86_64 x86_64"}'
       Content-Length:
-      - '171'
+      - '190'
   response:
     status:
       code: 200
@@ -31,11 +31,11 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Wed, 11 Jun 2014 10:58:32 GMT
+      - Wed, 11 Jun 2014 14:11:48 GMT
       Content-Type:
       - application/json;charset=utf-8
       Content-Length:
-      - '2236'
+      - '2260'
       Cache-Control:
       - no-cache, no-store
       Stripe-Version:
@@ -50,41 +50,41 @@ http_interactions:
       - max-age=31556926; includeSubDomains
     body:
       encoding: US-ASCII
-      string: ! "{\n  \"object\": \"customer\",\n  \"created\": 1402484312,\n  \"id\":
-        \"cus_4CYYAHG32k2S6t\",\n  \"livemode\": false,\n  \"description\": \"Membership
-        for \",\n  \"email\": \"iain@foobar.com\",\n  \"delinquent\": false,\n  \"metadata\":
-        {},\n  \"subscriptions\": {\n    \"object\": \"list\",\n    \"total_count\":
-        1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4CYYAHG32k2S6t/subscriptions\",\n
-        \   \"data\": [\n      {\n        \"id\": \"sub_4CYYSglt859Csp\",\n        \"plan\":
+      string: ! "{\n  \"object\": \"customer\",\n  \"created\": 1402495907,\n  \"id\":
+        \"cus_4CbfjG9gpoePqQ\",\n  \"livemode\": false,\n  \"description\": \"FooBar
+        Inc corporate supporter membership (KE6698TD)\",\n  \"email\": null,\n  \"delinquent\":
+        false,\n  \"metadata\": {},\n  \"subscriptions\": {\n    \"object\": \"list\",\n
+        \   \"total_count\": 1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4CbfjG9gpoePqQ/subscriptions\",\n
+        \   \"data\": [\n      {\n        \"id\": \"sub_4CbfR3CciXFNeJ\",\n        \"plan\":
         {\n          \"interval\": \"month\",\n          \"name\": \"Corporate Supporter
         (Monthly)\",\n          \"created\": 1402481417,\n          \"amount\": 12000,\n
         \         \"currency\": \"gbp\",\n          \"id\": \"corporate_supporter_monthly\",\n
         \         \"object\": \"plan\",\n          \"livemode\": false,\n          \"interval_count\":
         1,\n          \"trial_period_days\": null,\n          \"metadata\": {},\n
         \         \"statement_description\": null\n        },\n        \"object\":
-        \"subscription\",\n        \"start\": 1402484312,\n        \"status\": \"active\",\n
-        \       \"customer\": \"cus_4CYYAHG32k2S6t\",\n        \"cancel_at_period_end\":
-        false,\n        \"current_period_start\": 1402484312,\n        \"current_period_end\":
-        1405076312,\n        \"ended_at\": null,\n        \"trial_start\": null,\n
+        \"subscription\",\n        \"start\": 1402495907,\n        \"status\": \"active\",\n
+        \       \"customer\": \"cus_4CbfjG9gpoePqQ\",\n        \"cancel_at_period_end\":
+        false,\n        \"current_period_start\": 1402495907,\n        \"current_period_end\":
+        1405087907,\n        \"ended_at\": null,\n        \"trial_start\": null,\n
         \       \"trial_end\": null,\n        \"canceled_at\": null,\n        \"quantity\":
         1,\n        \"application_fee_percent\": null,\n        \"discount\": null,\n
         \       \"metadata\": {}\n      }\n    ]\n  },\n  \"discount\": null,\n  \"account_balance\":
         0,\n  \"currency\": \"gbp\",\n  \"cards\": {\n    \"object\": \"list\",\n
-        \   \"total_count\": 1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4CYYAHG32k2S6t/cards\",\n
-        \   \"data\": [\n      {\n        \"id\": \"card_104CYY4AkkLX9BwVw4Y9rnPj\",\n
+        \   \"total_count\": 1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4CbfjG9gpoePqQ/cards\",\n
+        \   \"data\": [\n      {\n        \"id\": \"card_104Cbf4AkkLX9BwV88xPfIof\",\n
         \       \"object\": \"card\",\n        \"last4\": \"4242\",\n        \"type\":
         \"Visa\",\n        \"exp_month\": 12,\n        \"exp_year\": 2016,\n        \"fingerprint\":
         \"ynpvkg0lBh03Sjdq\",\n        \"country\": \"US\",\n        \"name\": null,\n
         \       \"address_line1\": null,\n        \"address_line2\": null,\n        \"address_city\":
         null,\n        \"address_state\": null,\n        \"address_zip\": null,\n
         \       \"address_country\": null,\n        \"cvc_check\": \"pass\",\n        \"address_line1_check\":
-        null,\n        \"address_zip_check\": null,\n        \"customer\": \"cus_4CYYAHG32k2S6t\"\n
-        \     }\n    ]\n  },\n  \"default_card\": \"card_104CYY4AkkLX9BwVw4Y9rnPj\"\n}\n"
+        null,\n        \"address_zip_check\": null,\n        \"customer\": \"cus_4CbfjG9gpoePqQ\"\n
+        \     }\n    ]\n  },\n  \"default_card\": \"card_104Cbf4AkkLX9BwV88xPfIof\"\n}\n"
     http_version: 
-  recorded_at: Wed, 11 Jun 2014 10:58:32 GMT
+  recorded_at: Wed, 11 Jun 2014 14:11:48 GMT
 - request:
     method: get
-    uri: https://api.stripe.com/v1/customers/cus_4CYYAHG32k2S6t
+    uri: https://api.stripe.com/v1/customers/cus_4CbfjG9gpoePqQ
     body:
       encoding: US-ASCII
       string: ''
@@ -111,11 +111,11 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Wed, 11 Jun 2014 10:58:33 GMT
+      - Wed, 11 Jun 2014 14:11:49 GMT
       Content-Type:
       - application/json;charset=utf-8
       Content-Length:
-      - '2236'
+      - '2260'
       Access-Control-Allow-Methods:
       - GET, POST, HEAD, OPTIONS, DELETE
       Access-Control-Max-Age:
@@ -130,36 +130,36 @@ http_interactions:
       - max-age=31556926; includeSubDomains
     body:
       encoding: US-ASCII
-      string: ! "{\n  \"object\": \"customer\",\n  \"created\": 1402484312,\n  \"id\":
-        \"cus_4CYYAHG32k2S6t\",\n  \"livemode\": false,\n  \"description\": \"Membership
-        for \",\n  \"email\": \"iain@foobar.com\",\n  \"delinquent\": false,\n  \"metadata\":
-        {},\n  \"subscriptions\": {\n    \"object\": \"list\",\n    \"total_count\":
-        1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4CYYAHG32k2S6t/subscriptions\",\n
-        \   \"data\": [\n      {\n        \"id\": \"sub_4CYYSglt859Csp\",\n        \"plan\":
+      string: ! "{\n  \"object\": \"customer\",\n  \"created\": 1402495907,\n  \"id\":
+        \"cus_4CbfjG9gpoePqQ\",\n  \"livemode\": false,\n  \"description\": \"FooBar
+        Inc corporate supporter membership (KE6698TD)\",\n  \"email\": null,\n  \"delinquent\":
+        false,\n  \"metadata\": {},\n  \"subscriptions\": {\n    \"object\": \"list\",\n
+        \   \"total_count\": 1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4CbfjG9gpoePqQ/subscriptions\",\n
+        \   \"data\": [\n      {\n        \"id\": \"sub_4CbfR3CciXFNeJ\",\n        \"plan\":
         {\n          \"interval\": \"month\",\n          \"name\": \"Corporate Supporter
         (Monthly)\",\n          \"created\": 1402481417,\n          \"amount\": 12000,\n
         \         \"currency\": \"gbp\",\n          \"id\": \"corporate_supporter_monthly\",\n
         \         \"object\": \"plan\",\n          \"livemode\": false,\n          \"interval_count\":
         1,\n          \"trial_period_days\": null,\n          \"metadata\": {},\n
         \         \"statement_description\": null\n        },\n        \"object\":
-        \"subscription\",\n        \"start\": 1402484312,\n        \"status\": \"active\",\n
-        \       \"customer\": \"cus_4CYYAHG32k2S6t\",\n        \"cancel_at_period_end\":
-        false,\n        \"current_period_start\": 1402484312,\n        \"current_period_end\":
-        1405076312,\n        \"ended_at\": null,\n        \"trial_start\": null,\n
+        \"subscription\",\n        \"start\": 1402495907,\n        \"status\": \"active\",\n
+        \       \"customer\": \"cus_4CbfjG9gpoePqQ\",\n        \"cancel_at_period_end\":
+        false,\n        \"current_period_start\": 1402495907,\n        \"current_period_end\":
+        1405087907,\n        \"ended_at\": null,\n        \"trial_start\": null,\n
         \       \"trial_end\": null,\n        \"canceled_at\": null,\n        \"quantity\":
         1,\n        \"application_fee_percent\": null,\n        \"discount\": null,\n
         \       \"metadata\": {}\n      }\n    ]\n  },\n  \"discount\": null,\n  \"account_balance\":
         0,\n  \"currency\": \"gbp\",\n  \"cards\": {\n    \"object\": \"list\",\n
-        \   \"total_count\": 1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4CYYAHG32k2S6t/cards\",\n
-        \   \"data\": [\n      {\n        \"id\": \"card_104CYY4AkkLX9BwVw4Y9rnPj\",\n
+        \   \"total_count\": 1,\n    \"has_more\": false,\n    \"url\": \"/v1/customers/cus_4CbfjG9gpoePqQ/cards\",\n
+        \   \"data\": [\n      {\n        \"id\": \"card_104Cbf4AkkLX9BwV88xPfIof\",\n
         \       \"object\": \"card\",\n        \"last4\": \"4242\",\n        \"type\":
         \"Visa\",\n        \"exp_month\": 12,\n        \"exp_year\": 2016,\n        \"fingerprint\":
         \"ynpvkg0lBh03Sjdq\",\n        \"country\": \"US\",\n        \"name\": null,\n
         \       \"address_line1\": null,\n        \"address_line2\": null,\n        \"address_city\":
         null,\n        \"address_state\": null,\n        \"address_zip\": null,\n
         \       \"address_country\": null,\n        \"cvc_check\": \"pass\",\n        \"address_line1_check\":
-        null,\n        \"address_zip_check\": null,\n        \"customer\": \"cus_4CYYAHG32k2S6t\"\n
-        \     }\n    ]\n  },\n  \"default_card\": \"card_104CYY4AkkLX9BwVw4Y9rnPj\"\n}\n"
+        null,\n        \"address_zip_check\": null,\n        \"customer\": \"cus_4CbfjG9gpoePqQ\"\n
+        \     }\n    ]\n  },\n  \"default_card\": \"card_104Cbf4AkkLX9BwV88xPfIof\"\n}\n"
     http_version: 
-  recorded_at: Wed, 11 Jun 2014 10:58:33 GMT
+  recorded_at: Wed, 11 Jun 2014 14:11:49 GMT
 recorded_with: VCR 2.9.2
