Faked STRIPE_API key is necessary for tests to run

--- a/env.example
+++ b/env.example
@@ -15,3 +15,5 @@ RACKSPACE_DIRECTORY_ASSET_HOST=''
 GOOGLE_ANALYTICS_TRACKER='UA-xxxxxx-x'
 
 AIRBRAKE_DIRECTORY_KEY=''
+
+STRIPE_API_KEY='<STRIPE_API_KEY>'
