Quick fix to env

--- a/.travis.yml
+++ b/.travis.yml
@@ -38,3 +38,4 @@ env:
   - secure: MiZJ+pmU5stria23Cbf5AZEmMtSJmTyQAoFHY18n0MbcJbUHCquiG7E2HhzM6h9vvBnSBF1dKEV6p5XlZNs06MRvId/R4qkb8OL35QVqbQyrot7RHBlKaBaAeKrHheYNi4Sm5FiAOmCt6xgu9sMcdcVfDwJLEnjJyZHZzUuxWyI=
   - STRIPE_API_KEY=fakeapikey
   - FOUNDING_PARTNER_ID=NU4997LN
+  - XPC_SERVICE_NAME=0
